--- a/app/src/main/res/drawable/round_cornered_bg.xml
+++ b/app/src/main/res/drawable/round_cornered_bg.xml
@@ -1,11 +1,22 @@
-<?xml version="1.0" encoding="utf-8"?>
-<shape android:shape="rectangle" xmlns:android="http://schemas.android.com/apk/res/android">
+<?xml version="1.0" encoding="UTF-8"?>
+<ripple xmlns:android="http://schemas.android.com/apk/res/android"
+    android:color="#A90099CC">
+    <item>
+        <shape >
+            <gradient
+                android:angle="90"
 
-    <corners android:topLeftRadius="@dimen/_10sdp" android:topRightRadius="@dimen/_10sdp"></corners>
-    <gradient android:endColor="@color/colorPrimaryDark" android:angle="360"
-        android:startColor="@color/colorPrimary"
-        ></gradient>
-
-
-
-</shape>
+                android:startColor="@color/colorPrimary"
+                android:endColor="@color/colorPrimaryDark"/>
+            <corners android:radius="10dp" />
+            <stroke
+                android:width="1dip"
+                android:color="#A90099CC" />
+            <padding
+                android:bottom="0dip"
+                android:left="0dip"
+                android:right="0dip"
+                android:top="0dip" />
+        </shape>
+    </item>
+</ripple>
