--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,6 +14,8 @@
     <color name="followersBg">#65DCE5</color>
     <color name="followingBg">#49BEFF</color>
     <color name="grey">#E5E5E5</color>
+    <color name="greylight2">#f3f3f3</color>
+    <color name="greylight">#f1f1f1</color>
 
     <color name="white">#FFFFFF</color>
     <color name="lightgray">#ededed</color>
@@ -88,6 +90,14 @@
         <item>@color/darkgreen</item>
         <item>@color/colorPrimary</item>
     </integer-array>
-
+    <color name="transparent_black_hex_1">#f3f3f3</color>
+    <color name="transparent_black_hex_2">#e9e9e9</color>
+    <color name="transparent_black_hex_3">#33000000</color>
+    <color name="transparent_black_hex_4">#44000000</color>
+    <color name="transparent_black_hex_5">#55000000</color>
+    <color name="transparent_black_hex_6">#66000000</color>
+    <color name="transparent_black_hex_7">#77000000</color>
+    <color name="transparent_black_hex_8">#88000000</color>
+    <color name="transparent_black_hex_9">#99000000</color>
 </resources>
 
